<resources>
    <string name="app_name">Sniky Star</string>
    <string name="copyrights">Copyright @ 2018 CannyCloud Technologies Pvt. Ltd. All rights reserved.</string>
    <string name="logo_contentt_img">logo</string>
    <string name="password">Password</string>
    <string name="phone_no_email_address">Phone Number / Email Address</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="term_con">By Continue you agree to Cannycloud\'s terms and condition</string>
    <string name="login_with">Enter Your Profile With</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="follow">Follow</string>
    <string name="popular">Popular</string>
    <string name="skip_registration_process"><![CDATA[ Skip Registration Process > ]]></string>
    <string name="send_code">Send Code</string>
    <string name="enter_your_contact_number_to_get_an_one_time_password">Enter Your Phone Number To Get An One Time Password</string>
    <string name="enter_your_email_id_to_get_a_verification_code">Enter Your Email Address To Get A Verification Code.</string>
    <string name="enter_your_verification_code_here">Enter Your Verification Code Here</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="biography">Biography</string>
    <string name="email_address">Email Address</string>
    <string name="referral_code">Referral Code</string>
    <string name="submit">submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="comment_as_udit">Comment as Udit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_profile">Edit Profile</string>
    <string name="wallet">Wallet</string>
    <string name="help_and_support">Help And Support</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="moments">Moments</string>
    <string name="home">Home</string>
    <string name="go_live">Go Live</string>
    <string name="make_video">Make Video</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="notification">Notification</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="parental_control">Parental Control</string>
    <string name="profession">Profession</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="setting">Setting</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="about">About</string>
    <string name="views">Views</string>
    <string name="following">Following</string>
    <string name="fans">Fans</string>
    <string name="stars">Stars</string>
    <string name="logout_msg">Do You Want To Log Out From This App ?</string>
    <string name="clear_cache_msg">Are You Sure, You Want To Clear The App Cache Data ?</string>
    <string name="saved">Saved</string>
    <string name="cancel">Cancel</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="add_to_close_friends">Add To Close Friends</string>
    <string name="share_this_profile">Share This Profile</string>
    <string name="mute">Mute</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="remove_star">Remove Star</string>
    <string name="hide_all_post_from_this_user">Hide all Post From This User</string>
    <string name="message_something">Message Something..</string>
    <string name="messages">Messages</string>
    <string name="type_name">Type Name..</string>
    <string name="recent_search">Recent Search</string>
    <string name="users">Users</string>
    <string name="music">Music</string>
    <string name="trending">Trending</string>
    <string name="hashtags">Hashtags</string>
    <string name="why_are_you_reporting_this">Why are you reporting this ?</string>
    <string name="spam_or_misleading">Spam or misleading</string>
    <string name="violent_or_repulsive_content">Violent or repulsive content</string>
    <string name="sexual_content">Sexual content</string>
    <string name="harmful_or_dangerous_acts">Harmful or dangerous acts</string>
    <string name="hateful_or_abusive_content">Hateful or abusive content</string>
    <string name="others">Others</string>
    <string name="share_on">Share On</string>
    <string name="more_options">More Options</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="copy_link">Copy Link</string>
    <string name="download">Download</string>
    <string name="duet">Duet</string>
    <string name="make_gif">Make GIF</string>
    <string name="save">Save</string>
    <string name="contribute">Contribute</string>
    <string name="your_feedback_is_important_in_helping_us_keep_the_snikystar_community_safe">Your feedback is important in helping us keep the Snikystar community safe</string>
    <string name="thanks_for_letting_us_know">Thanks for letting us know</string>
    <string name="request">Request</string>
    <string name="post">Post</string>
    <string name="user_id">User Id</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>