<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.profile.fragment.ProfileSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <RelativeLayout
            android:id="@+id/layout_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="@dimen/_2sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/yellow" />


        </RelativeLayout>

        <TextView
            android:id="@+id/titile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/seguisb"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:padding="@dimen/_20sdp"
            android:text="@string/privacy"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/security"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:padding="@dimen/_20sdp"
            android:text="@string/security"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/parental_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:padding="@dimen/_20sdp"
            android:text="@string/parental_control"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/help_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:padding="@dimen/_20sdp"
            android:text="@string/help_and_support"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:padding="@dimen/_20sdp"
            android:text="@string/about"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</layout>