<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_round_trans">

            <TextView
                android:layout_toStartOf="@+id/clear_filter"
                android:id="@+id/filter_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/more_options"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/clear_filter"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_8sdp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_close"
                app:tint="@color/grey" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blacktrans"
            android:orientation="vertical">

            <TextView
                android:id="@+id/m_dislike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/seguisb"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/remove_star"
                android:textColor="@color/exo_white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/m_hide_allfrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/seguisb"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/hide_all_post_from_this_user"
                android:textColor="@color/exo_white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/m_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/seguisb"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/report"
                android:textColor="@color/exo_white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


    </LinearLayout>
</layout>