<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_round_trans">

            <TextView
                android:id="@+id/filter_txt"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_toStartOf="@+id/clear_filter"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/share_on"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14sdp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/clear_filter"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_8sdp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_close"
                app:tint="@color/grey" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blacktrans"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_whatsapp2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/whatsapp"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_facebook" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/facebook"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_twitter" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/twitter"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_message_share" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/messages"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_link" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/copy_link"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_download" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/download"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_duet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/duet"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_gif" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/make_gif"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_save_btn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/ic_contribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:fontFamily="@font/seguisb"
                        android:gravity="center"
                        android:text="@string/contribute"
                        android:textColor="@color/exo_white"
                        android:textSize="@dimen/_8sdp"
                        android:visibility="visible" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</layout>